--- a/react-client/src/css/signup-login-form.css
+++ b/react-client/src/css/signup-login-form.css
@@ -1,3 +1,34 @@
-.signup-login-form {
-  border: 2px solid red;
+.signup-form .form-container{
+  position: fixed;
+  border-radius: 4px;
+  width: 250px;
+  height: 300px;
+  top: 100px;
+  left: 50%;
+  margin-left: -125px;
+  background-color: #fff;
+}
+
+.signup-form form {
+  margin: 80px auto;
+  width: 90%;
+}
+
+.signup-form form input {
+  border: none;
+  border-bottom: 1px solid rgba(25,25,25,0.1);
+  line-height: 1.7;
+  margin-bottom: 7px;
+  width: 100%;
+}
+
+.signup-form form input:focus {
+  outline: none;
+}
+
+.signup-form .submit {
+  background-color: #fdc900;
+  font-size: 1.2em;
+  margin-top: 10px;
+  color: white;
 }
