--- a/react-client/src/css/signup-login-form.css
+++ b/react-client/src/css/signup-login-form.css
@@ -1,11 +1,11 @@
 .signup-form .form-container{
   position: fixed;
   border-radius: 4px;
-  width: 250px;
+  width: 90%;
   height: 300px;
   top: 100px;
   left: 50%;
-  margin-left: -125px;
+  margin-left: -45%;
   background-color: #fff;
 }
 
@@ -17,8 +17,8 @@
 .signup-form form input {
   border: none;
   border-bottom: 1px solid rgba(25,25,25,0.1);
-  line-height: 1.7;
-  margin-bottom: 7px;
+  line-height: 1.9;
+  margin-bottom: 11px;
   width: 100%;
 }
 
