--- a/react-client/src/css/signup-login-form.css
+++ b/react-client/src/css/signup-login-form.css
@@ -3,7 +3,7 @@
   border-radius: 4px;
   width: 90%;
   height: 300px;
-  top: 100px;
+  top: 10%;
   left: 50%;
   margin-left: -45%;
   background-color: #fff;
