--- a/react-client/src/css/signup-login-form.css
+++ b/react-client/src/css/signup-login-form.css
@@ -1,11 +1,20 @@
+.signup-form {
+  background: red;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(33,33,33,0.45);
+}
 .signup-form .form-container{
   position: fixed;
   border-radius: 4px;
-  width: 90%;
+  width: 80%;
   height: 300px;
   top: 10%;
   left: 50%;
-  margin-left: -45%;
+  margin-left: -40%;
   background-color: #fff;
 }
 
@@ -34,8 +43,9 @@
 .signup-actions button {
   flex-grow: 1;
   border-radius: 4px;
+  padding: 0;
   border: none;
-  line-height: 2;
+  line-height: 2.2;
   font-size: 1.2em;
   margin: 5px;
 }
@@ -49,7 +59,7 @@
   color: #212121;
 }
 .signup-form .cancle {
-  line-height: 2;
+  line-height: 2.2;
   font-size: 1.2em;
   margin: 5px;
   text-align: center;
